<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:inputType="text"
        android:singleLine="true"
        android:title="@string/pref_location_title"
        android:defaultValue="@string/pref_default_value" />

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pre_units_title"
        android:entries="@array/units"
        android:defaultValue="@string/pre_unit_default"
        android:entryValues="@array/units_values"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>